--- a/src/global.modules.css
+++ b/src/global.modules.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-    width: 100%;
+    max-width: 100%;
     margin: 0 auto;
 }
 
@@ -95,16 +95,20 @@ td {
     padding-right: 24px;
 }
 
-@media (max-width: 640px) {
+@media (min-width:300px) and (max-width: 667px) {
     .container {
         width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        height: 100%;
     }
 
     input {
-        width: 240px;
-        margin: 8px 50px;
-        margin-left: 68px;
-    }
+        height: 38px;
+    text-align: center;
+    width: 50vh;
+    margin: 8px 18px;
+}
 
     .imc {
         margin: 6px 0;
@@ -144,10 +148,10 @@ td {
         border-radius: 2px;
         cursor: pointer;
         padding: 8px;
-        align-items: center;
-        width: 255px;
-        margin-bottom: 30px;
-        margin-left: 55px;
+        text-align: center;
+        width: 50vh;
+        margin: 16px 18px;
+        height: 38px;
     }
 
 }
