--- a/src/global.modules.css
+++ b/src/global.modules.css
@@ -5,12 +5,15 @@
 }
 
 .container {
-    max-width: 100%;
+    max-width: 1350px;
+    width: 100%;
+    max-height: 100%;
     margin: 0 auto;
+    background-color: rgb(247, 244, 244);
 }
 
 header {
-    padding: 50px 0;
+    padding: 40px 0;
     background-color: rgb(172, 164, 168);
     color: #fff;
     margin-bottom: 24px;
@@ -24,32 +27,24 @@ footer {
     font-size: 15px;
 }
 
-h1,
-h3,
-.table-container,
-footer {
+.table-container, h1, h3, footer {
     margin-top: 8px;
     font-family: sans-serif;
     text-align: center;
 }
 
-.imc {
-    margin: 6px 0;
-}
-
-
-input,
-span {
+form, input {
     text-align: center;
-    width: 540px;
-    margin: 8px 265px;
-    padding: 4px;
-    padding: 4px 100px;
-    margin: 8px 405px;
+    width: 65%;
+    margin: 12px auto;
+    padding: 8px;
+}
+
+.imc {
+    margin-bottom: 12px;
 }
 
 span {
-    margin-left: 555px;
     font-weight: bold;
     font-size: 18px;
 }
@@ -63,10 +58,9 @@ button {
     cursor: pointer;
     padding: 8px;
     align-items: center;
-    width: 540px;
+    width: 65%;
+    margin-top: 4px;
     margin-bottom: 30px;
-    margin-left: 405px;
-    margin-top: 12px;
 }
 
 button:hover {
@@ -78,6 +72,7 @@ button:hover {
     text-align: center;
     padding: 0 auto;
     margin: 0 auto;
+    height: 100vh;
 }
 
 .table-container-border,
@@ -88,56 +83,44 @@ td {
     background-color: #ccc;
     margin: 8px auto;
     text-align: center;
-    height: 60px;
+    height: 70px;
 }
-
-td {
-    padding-right: 24px;
-}
-
-@media (max-width: 340px) {
+@media (max-width: 640px) {
 
     .container {
-        width: 100vh;
+        width: 100%;
+        height: 100%;
         margin: 0 auto;
+        background-color: rgb(247, 244, 244);
     }
+    
 
-    input {
-    height: 44px;
-    text-align: center;
-    width: 45vh;
-    margin: 8px 10px;
-}
-
+    form, input {
+        text-align: center;
+        width: 70%;
+        margin: 24px auto;
+        padding: 12px;
+    }
+    
     .imc {
-        margin: 6px 10x;
+        margin-bottom: 12px;
     }
-
+    
     span {
-        margin-left: 40px;
         font-weight: bold;
-        font-size: 16px;
-    }
-
-    header,
-    h1 {
-        padding: 10px 0;
-        font-size: 30px;
+        font-size: 18px;
     }
 
     header {
-        width:  343px;
+        padding: 40px 0;
+        background-color: rgb(172, 164, 168);
+        color: #fff;
+        margin-bottom: 24px;
     }
-
     .table-container-border {
-        width: 45vh;
         margin: 8px auto;
-        height: 40px;
-        margin-left: 12px;
-    }
-
-    h3 {
-        margin-left: 25px;
+        width: 60%;
+        margin-bottom: 56px;
     }
 
     td {
@@ -151,7 +134,7 @@ td {
         cursor: pointer;
         padding: 8px;
         text-align: center;
-        width: 45vh;
+        width: 70%;
         margin: 8px 10px;
         height: 44px;
         margin-bottom: 45px;
